VIVO-215: fix layout of search results page - the first search result was appearing up in the header as were the facets; standardize look of the download popup. Also ensure that longer headings that include types from the facet wrap to new line rather than overrun the search help link.

--- a/webapp/web/css/individual/individual.css
+++ b/webapp/web/css/individual/individual.css
@@ -268,11 +268,6 @@ input#uriLink {
     width: 350px;
     font-size: .8em;
 }
-a.close {
-    float: right;
-    margin-right: .3em;
-    font-size: .8em;
-}
 .rdf-url {
     display: block;
     padding-top: 0.8em;
